Initializing The Header Section
Completed header section (CSS included)

--- a/index.html
+++ b/index.html
@@ -10,16 +10,79 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,900|Source+Sans+Pro:300,300i,400,400i,600,700,900&display=swap" rel="stylesheet">
 
 	<!--favicon-->
-	<link rel="icon" type="image/png" href="images//favicon.png">
+	<link rel="icon" type="image/png" href="images/favicon.png">
 
 	<!--css-->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!--fontawesome-->
 	<link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 
 </head>
 <body>
+	<!--Header-->
+	<header class="header">
+		<div class="header-overlay">
+			<div class="container">
+
+				<div class="row">
+					<div class="col-md-12">
+						<!--Logo-->
+						<div class="logo text-left">
+							<img id="main-logo" src="images/logo.png" alt="logo">
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-6">
+						<div class="header-text">
+							<!--Title & Desc-->
+							<h1>Welcome to the world where your voice matters!</h1>
+							<p>Let us know your matter and we'll take care of it!</p>							
+						</div>
+						<div class="header-btns">
+							<!--header buttons-->
+							<a class="btn btn-matter" href="#">What's Your <br>Matter?</a>
+							<a class="btn btn-tour" href="#">Take a Tour
+								<i class="fa fa-angle-down"></i>
+								<p>and see what it's all about!</p>
+							</a>
+							
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="row1">
+							<div class="col-grid">
+							    <img src="images/1.jpg">
+							    <img src="images/2.jpg">
+							    <img src="images/3.jpg">
+							</div>
+							<div class="col-grid">
+							    <img src="images/4.jpg">
+							    <img src="images/9.jpg">
+							    <img src="images/11.jpg">
+							    <img src="images/12.jpg">
+							    <img src="images/10.jpg">
+							</div>
+							<div class="col-grid">
+							    <img src="images/7.jpg">
+							    <img src="images/8.jpg">
+								<img src="images/6.jpg">
+							</div>
+							<div class="col-grid">
+							    <img src="images/13.jpg">
+							    <img src="images/14.jpg">
+							    <img src="images/15.jpg">
+							    <img src="images/5.jpg">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
 
 	<!--Bootsrap JS-->
 	<script src="js/jquery.js"></script>
