Initialized About Us Section
Updated Header Section.
About Us section with dummy context (to be updated).

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
 	<!--Google Fonts-->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,900|Source+Sans+Pro:300,300i,400,400i,600,700,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
 
 	<!--favicon-->
 	<link rel="icon" type="image/png" href="images/favicon.png">
 
-	<!--css-->
+	<!--css-->			
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!--fontawesome-->
@@ -25,7 +26,6 @@
 	<header class="header">
 		<div class="header-overlay">
 			<div class="container">
-
 				<div class="row">
 					<div class="col-md-12">
 						<!--Logo-->
@@ -34,22 +34,21 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="row">
 					<div class="col-md-6">
 						<div class="header-text">
 							<!--Title & Desc-->
-							<h1>Welcome to the world where your voice matters!</h1>
-							<p>Let us know your matter and we'll take care of it!</p>							
+							<h1>Your Voice Matters!</h1>
+							<h2>Welcome to the world where your voice matters!</h2>
+							<p>Let us know your matter, your concerns or anything you wish that would be helpful to make our Sri Lanka better and beautiful!<br>We'll help you to make the good change!</p>							
 						</div>
 						<div class="header-btns">
 							<!--header buttons-->
-							<a class="btn btn-matter" href="#">What's Your <br>Matter?</a>
+							<a class="btn btn-matter" href="#">Write About<br>Your Concern</a>
 							<a class="btn btn-tour" href="#">Take a Tour
 								<i class="fa fa-angle-down"></i>
 								<p>and see what it's all about!</p>
 							</a>
-							
 						</div>
 					</div>
 					<div class="col-md-6">
@@ -72,9 +71,9 @@
 								<img src="images/6.jpg">
 							</div>
 							<div class="col-grid">
-							    <img src="images/13.jpg">
-							    <img src="images/14.jpg">
 							    <img src="images/15.jpg">
+							    <img src="images/14.jpg">
+							    <img src="images/13.jpg">
 							    <img src="images/5.jpg">
 							</div>
 						</div>
@@ -83,6 +82,93 @@
 			</div>
 		</div>
 	</header>
+
+	<!--About us-->
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 offset-1">
+					<!--About Us Title & Desc-->
+					<div class="section-title">
+						<h2>About Us</h2>
+						<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="choose-us-wrapper">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-5 offset-1">
+						<!--About us video-->
+						<div class="about-us-video">
+							<video width="400" muted loop autoplay>
+								<source src="videos/about-us.mp4" type="video/mp4" alt="About Us">
+							</video>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<!--Why choose us title-->
+						<div class="choose-us-title">
+							<h2>Why Choose Us?</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.</p>
+						</div>
+						<!--why choose us desc-->
+						<div class="choose-us-desc">
+							<!--choose-us-item1-->
+							<div class="choose-us-item">
+								<!--choose- us item icon-->
+								<div><i class="fa fa-bolt"></i></div>
+									<!--choose us item title & desc-->
+									<h3>Maecenas non sodales justo. </h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+									quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+									consequat.</p>
+							</div>
+							<!--choose-us-item2-->
+							<div class="choose-us-item">
+								<!--choose- us item icon-->
+								<div><i class="fa fa-bullhorn"></i></div>
+									<!--choose us item title & desc-->
+									<h3>Cras tristique mi in sodales tempor.</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut labore et dolore magna aliqua.</p>
+							</div>
+							<!--choose-us-item3-->
+							<div class="choose-us-item">
+								<!--choose- us item icon-->
+								<div><i class="fa fa-flag-o"></i></div>
+									<!--choose us item title & desc-->
+									<h3>Nulla ac egestas arcu.</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+									quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+									consequat.</p>
+							</div>
+							<!--choose-us-item4-->
+							<div class="choose-us-item">
+								<!--choose- us item icon-->
+								<div><i class="fa fa-dollar"></i></div>
+									<!--choose us item title & desc-->
+									<h3>Quisque imperdiet sem et mollis venenatis.</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut labore et dolore magna aliqua.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<!--Bootsrap JS-->
 	<script src="js/jquery.js"></script>
