Initializing the Testimonial Section
Testimonials-To be updated
Updates on Header and About Us Section

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 	<!--css-->			
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	
 	<!--fontawesome-->
 	<link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-
+	
 </head>
 <body>
 	<!--Header-->
@@ -84,7 +85,7 @@
 	</header>
 
 	<!--About us-->
-	<section>
+	<section id="white">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 offset-1">
@@ -170,9 +171,100 @@
 		</div>
 	</section>
 
+	<!--Testimonial-->
+	<section class="testimonial">
+		<div class="testimonial-overlay">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div id="carousel-testimonial" class="carousel slide" data-ride="carousel">
+							<!--indicators-->
+							<ol class="carousel-indicators">
+							    <li data-target="#carousel-testimonial" data-slide-to="0" class="active"></li>
+							    <li data-target="#carousel-testimonial" data-slide-to="1"></li>
+							    <li data-target="#carousel-testimonial" data-slide-to="2"></li>
+							    <li data-target="#carousel-testimonial" data-slide-to="3"></li>
+							</ol>
+							<!--wrapper for slides-->
+							<div class="carousel-inner">
+								<!--item 01-->
+								<div class="carousel-item active text-center">
+									<img class="center-block" src="images/clients/c1.png" alt="testimonial">
+									<div class="testimonial-caption">
+										<h2>Lily</h2>
+										<h4><span>Sr. SE, </span>Blue Gyms</h4>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+										consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+										cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+										proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									</div>
+								</div>
+								<!--item 02-->
+								<div class="carousel-item text-center">
+									<img class="center-block" src="images/clients/c2.png" alt="testimonial">
+									<div class="testimonial-caption">
+										<h2>Mike</h2>
+										<h4><span>Sr. Dev, </span>Risko</h4>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+										consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+										cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+										proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									</div>
+								</div>
+								<!--item 03-->
+								<div class="carousel-item text-center">
+									<img class="center-block" src="images/clients/c3.png" alt="testimonial">
+									<div class="testimonial-caption">
+										<h2>Robin</h2>
+										<h4><span>Manager, </span>Sky High</h4>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+										consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+										cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+										proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									</div>
+								</div>
+								<!--item 04-->
+								<div class="carousel-item text-center">
+									<img class="center-block" src="images/clients/c4.png" alt="testimonial">
+									<div class="testimonial-caption">
+										<h2>Krish</h2>
+										<h4><span>Doctor, </span>ASH Hospitals</h4>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+										consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+										cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+										proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									</div>
+								</div>
+		
+							</div>
+							<a class="carousel-control-prev" href="#carousel-testimonial" role="button" data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carousel-testimonial" role="button" data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!--Bootsrap JS-->
 	<script src="js/jquery.js"></script>
 	<script type="js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 </body>
 </html>
