Initializing the Features Section
Features - to be updated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
 	<!--Google Fonts-->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,900|Source+Sans+Pro:300,300i,400,400i,600,700,900&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
 
 	<!--favicon-->
 	<link rel="icon" type="image/png" href="images/favicon.png">
@@ -258,6 +257,108 @@
 				</div>
 			</div>
 		</div>
+	</section>
+
+	<!--What's happenning-->
+	<section id="white" class="features">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 offset-1">
+					<div class="section-title">
+						<h2>Features</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="features-inner-wrapper">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4">
+						<!--left feature item 1-->
+						<div class="left-feature-item">
+							<!--icon-->
+							<div class="left-feature-item-icon">
+								<i class="fa fa-desktop"></i>
+							</div>
+							<!--feature icon title & desc-->
+							<h3>Retina Ready</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+						<!--left feature item 2-->
+						<div class="left-feature-item">
+							<!--icon-->
+							<div class="left-feature-item-icon">
+								<i class="fa fa-mobile"></i>
+							</div>
+							<!--feature icon title & desc-->
+							<h3>Mobile Ready</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+						<!--left feature item 3-->
+						<div class="left-feature-item">
+							<!--icon-->
+							<div class="left-feature-item-icon">
+								<i class="fa fa-eye"></i>
+							</div>
+							<!--feature icon title & desc-->
+							<h3>Easy Layout</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="feature-problem">
+							<img src="images/features/f7.png" alt="Features">
+							<img id="imgsize" src="images/features/f8.png" alt="Features">
+							<img id="imgsize2" src="images/features/f2.png" alt="Features">
+						</div>
+					</div>
+					<div class="col-md-4">
+						<!--Right feature item 1-->
+						<div class="right-feature-item">
+							<!--icon-->
+							<div class="right-feature-item-icon">
+								<i class="fa fa-certificate"></i>
+							</div>
+							<!--feature icon title & desc-->
+							<h3>Cert. Solution</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+						<!--Right feature item 2-->
+						<div class="right-feature-item">
+							<!--icon-->
+							<div class="right-feature-item-icon">
+								<i class="fa fa-rss"></i>
+							</div>
+							<!--feature icon title & desc-->
+							<h3>Constant Feed</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+						<!--Right feature item 2-->
+						<div class="right-feature-item">
+							<!--icon-->
+							<div class="right-feature-item-icon">
+								<i class="fa fa-database"></i>
+							</div>
+							<!--feature icon title & desc-->
+							<h3>Secure Data</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</section>
 
 	<!--Bootsrap JS-->
