--- a/index.html
+++ b/index.html
@@ -358,7 +358,23 @@
 				</div>
 			</div>
 		</div>
+	</section>
 
+	<!--Donate Now-->
+	<section class="donate-now">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-9">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat.</p>
+				</div>
+				<div class="col-md-3 text-center">
+					<a class="btn btn-primary btn-donate-now" href="#">Donate Now!</a>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<!--Bootsrap JS-->
