Initializing Counters Section
Section which shows a summary of the total impact

--- a/index.html
+++ b/index.html
@@ -377,6 +377,44 @@
 		</div>
 	</section>
 
+	<!-- Counters-->
+	<section class="counter">
+		<div class="counter-overlay">
+			<div class="container">
+				<div class="row text-center">
+					<div class="col-md-3">
+						<div class="counter-item">
+							<div><i class="fa fa-upload"></i></div>
+							<h2><span class="counter-num">1588</span><span>+</span></h2>
+							<p>Matters Submitted</p>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="counter-item">
+							<div><i class="fa fa-bullhorn"></i></div>
+							<h2><span class="counter-num">355</span><span>+</span></h2>
+							<p>People Have Raised their Voice</p>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="counter-item">
+							<div><i class="fa fa-lightbulb"></i></div>
+							<h2><span class="counter-num">199</span><span>+</span></h2>
+							<p>Actions Taken</p>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="counter-item">
+							<div><i class="fa fa-check-circle"></i></div>
+							<h2><span class="counter-num">1066</span><span>+</span></h2>
+							<p>Recommended</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!--Bootsrap JS-->
 	<script src="js/jquery.js"></script>
 	<script type="js/bootstrap.min.js"></script>
