--- a/index.html
+++ b/index.html
@@ -415,6 +415,56 @@
 		</div>
 	</section>
 
+	<!--Contact us-->
+	<section id="white" class="contact-us">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 offset-1">
+					<div class="section-title">
+						<h2>Contact Us</h2>
+						<p>Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="contact-us-form">
+			<div class="container">
+				<form role="form">
+					<div class="row">
+						<div class="col-md-4">
+							<input type="text" id="name" class="form-control" placeholder="Name">
+							<input type="email" id="email" class="form-control" placeholder="Email">
+							<input type="text" id="subject" class="form-control" placeholder="Subject">
+						</div>
+						<div class="col-md-8">
+							<textarea class="form-control" id="message" rows="25" cols="10" placeholder="Write your message here..">	
+							</textarea>
+							<button type="button" class="btn btn-default submit-btn form_submit">SEND</button>
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="social-icons">
+						<ul>
+							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
+							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
+		
+	</section>
+
 	<!--Bootsrap JS-->
 	<script src="js/jquery.js"></script>
 	<script type="js/bootstrap.min.js"></script>
