Initializing the Footer Section
The development of an area that contains data common to other pages.
(Completed)

--- a/index.html
+++ b/index.html
@@ -447,24 +447,51 @@
 				</form>
 			</div>
 			<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="social-icons">
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-							<li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-						</ul>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="social-icons">
+							<ul>
+								<li><a href="#">	<i class="fa fa-facebook">		</i></a></li>
+								<li><a href="#">	<i class="fa fa-instagram">		</i></a></li>
+								<li><a href="#">	<i class="fa fa-whatsapp">		</i></a></li>
+								<li><a href="#">	<i class="fa fa-twitter">		</i></a></li>
+								<li><a href="#">	<i class="fa fa-youtube-play">	</i></a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		</div>
-		
 	</section>
 
+	<!--Footer-->
+	<footer class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<div id="copyright">
+						<p>Copyright &copy; 2020 <a href="#"> - Your Voice Matters!</a></p>
+						<p>This site is protected by reCAPTCHA and the Google 
+							<a href="https://policies.google.com/privacy" class="sc-fjdhpX bUZXjM">Privacy Policy</a> and 
+							<a href="https://policies.google.com/terms" class="sc-fjdhpX bUZXjM">Terms of Service</a> apply.
+						</p>
+					</div>
+				</div>				
+				<div class="col-md-4 offset-2">
+					<div class="language">
+						<select class="languagepicker">
+							<option value="en-US">English</option>
+							<option value="si-si">සිංහල</option>
+						</select>
+					</div>
+					<div class="scroll-top">
+						<a href="#"><i class="fa fa-angle-up"></i></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+	
 	<!--Bootsrap JS-->
 	<script src="js/jquery.js"></script>
 	<script type="js/bootstrap.min.js"></script>
