Initializing the Footer Section
The development of an area that contains data common to other pages.
(Completed)

--- a/index.html
+++ b/index.html
@@ -439,8 +439,7 @@
 							<input type="text" id="subject" class="form-control" placeholder="Subject">
 						</div>
 						<div class="col-md-8">
-							<textarea class="form-control" id="message" rows="25" cols="10" placeholder="Write your message here..">	
-							</textarea>
+							<textarea class="form-control" id="message" rows="25" cols="10" placeholder="Write your message here.."></textarea>
 							<button type="button" class="btn btn-default submit-btn form_submit">SEND</button>
 						</div>
 					</div>
