--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 	<header class="header" id="HOME">
 		<!-- Navigation Bar -->
 		<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+			<a class="navbar-brand" href="#HOME"><img src="images/logo.png" alt="logo"></a>
 			<div class="navbar-header">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<a class="navbar-brand" href="#HOME"><img src="images/logo-small.png" alt="logo">Your Voice Matters!</a>
 			</div>
 			<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav ml-auto">
@@ -38,7 +38,7 @@
 					<li class="nav-item"><a href="#ABOUT" class="nav-link">ABOUT US</a></li>
 					<li class="nav-item"><a href="#FEATURES" class="nav-link">FEATURES</a></li>
 					<li class="nav-item"><a href="#CONTACT" class="nav-link">CONTACT US</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">WRITE ABOUT YOUR CONCERN</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">LOG IN / SIGN UP</a></li>
 				</ul>
 			</div>  
 		</nav>
@@ -529,7 +529,7 @@
 					</div>
 				</div>
 				<div class="footer-col col-md-1 footer-connect">	
-					<img src="images/logo.png" alt="logo" style="width: 150px;">
+					<img src="images/logo.png" alt="logo">
 					<div class="scroll-top">
 						<a href="#HOME"><i class="fa fa-angle-up"></i></a>
 					</div>
@@ -543,6 +543,8 @@
 	<script type="js/bootstrap.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+	<!--custom js-->
+	<script src="js/custom.js" type="text/javascript"></script>
 
 </body>
 </html>
