--- a/register.html
+++ b/register.html
@@ -1,8 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="css/register.css">
+</head>
+<body>
+
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
 		<form action="#">
 			<h1>Create Account</h1>
-			
 			<span>or use your email for registration</span>
 			<input type="text" placeholder="Name" />
 			<input type="email" placeholder="Email" />
@@ -13,7 +20,7 @@
 	<div class="form-container log-in-container">
 		<form action="#">
 			<h1>Sign in</h1>
-			<span>or use your account</span>
+			
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
 			<a href="#">Forgot your password?</a>
@@ -35,4 +42,9 @@
 		</div>
 	</div>
 </div>
+
+</body>
+</html>
+
+
 
