--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li class="nav-item"><a href="#ABOUT" class="nav-link">ABOUT US</a></li>
 					<li class="nav-item"><a href="#FEATURES" class="nav-link">FEATURES</a></li>
 					<li class="nav-item"><a href="#CONTACT" class="nav-link">CONTACT US</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">LOG IN / SIGN UP</a></li>
+					<li class="nav-item"><a href="register.html" class="nav-link">SUBMIT YOUR CONCERN</a></li>
 				</ul>
 			</div>  
 		</nav>
@@ -54,7 +54,7 @@
 						</div>
 						<div class="header-btns">
 							<!--header buttons-->
-							<a class="btn btn-matter" href="#">Write About<br>Your Concern</a>
+							<a class="btn btn-matter" href="register.html">Submit<br>Your Concern</a>
 							<a class="btn btn-tour" href="#">Take a Tour
 								<i class="fa fa-angle-down"></i>
 								<p>and see what it's all about!</p>
@@ -545,6 +545,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	<!--custom js-->
 	<script src="js/custom.js" type="text/javascript"></script>
+	
 
 </body>
 </html>
