--- a/register.html
+++ b/register.html
@@ -1,13 +1,18 @@
-<div class="container" id="container">
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<div class="container" id="container">
 	<div class="form-container sign-up-container">
 		<form action="#">
 			<h1>Create Account</h1>
-			
 			<span>or use your email for registration</span>
 			<input type="text" placeholder="Name" />
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
-			<button>Sign Up</button>
+			<button onclick="red()">Sign Up</button>
 		</form>
 	</div>
 	<div class="form-container log-in-container">
@@ -17,7 +22,7 @@
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
 			<a href="#">Forgot your password?</a>
-			<button>Sign In</button>
+			<button onclick="red()">Sign In</button>
 		</form>
 	</div>
 	<div class="overlay-container">
@@ -25,14 +30,18 @@
 			<div class="overlay-panel overlay-left">
 				<h1>Welcome Back!</h1>
 				<p>To keep connected with us please login with your personal info</p>
-				<button class="ghost" id="signIn">Sign In</button>
+				<button class="ghost" id="signIn" onclick="red()">Sign In</button>
 			</div>
 			<div class="overlay-panel overlay-right">
 				<h1>Your Voice Matters!</h1>
 				<p>Enter your personal details and start journey with us</p>
-				<button class="ghost" id="signUp">Sign Up</button>
+				<button class="ghost" id="signUp" onclick="red()">Sign Up</button>
 			</div>
 		</div>
 	</div>
 </div>
 
+<script src="js/register.js" type="text/javascript"></script>
+
+</body>
+</html>
