--- a/register.html
+++ b/register.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Log in / Sign up</title>
 	<link rel="stylesheet" type="text/css" href="css/register.css">
 </head>
 <body>
+
+<div class="container" id="container">
 	<div class="form-container sign-up-container">
 		<form action="#">
 			<h1>Create Account</h1>
@@ -12,13 +14,12 @@
 			<input type="text" placeholder="Name" />
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
-			<button onclick="red()">Sign Up</button>
+			<button>Sign Up</button>
 		</form>
 	</div>
 	<div class="form-container log-in-container">
 		<form action="#">
-			<h1>Sign in</h1>
-			
+			<h1>Sign in</h1>			
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
 			<a href="#">Forgot your password?</a>
@@ -35,12 +36,11 @@
 			<div class="overlay-panel overlay-right">
 				<h1>Your Voice Matters!</h1>
 				<p>Enter your personal details and start journey with us</p>
-				<button class="ghost" id="signUp" onclick="red()">Sign Up</button>
+				<button class="ghost" id="signUp">Sign Up</button>
 			</div>
 		</div>
 	</div>
 </div>
 <script src="js/register.js" type="text/javascript"></script>
-
 </body>
 </html>
