--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
 			<input type="text" placeholder="Name" />
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
-			<button>Sign Up</button>
+			<button onclick="red()">Sign Up</button>
 		</form>
 	</div>
 	<div class="form-container log-in-container">
@@ -23,7 +23,7 @@
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
 			<a href="#">Forgot your password?</a>
-			<button onclick="red()">Sign In</button>
+			<button>Sign In</button>
 		</form>
 	</div>
 	<div class="overlay-container">
