--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</div>
 			<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a href="#HOME" class="nav-link active">HOME</a></li>
+					<li class="nav-item"><a href="#HOME" class="nav-link">HOME</a></li>
 					<li class="nav-item"><a href="#ABOUT" class="nav-link">ABOUT US</a></li>
 					<li class="nav-item"><a href="#FEATURES" class="nav-link">FEATURES</a></li>
 					<li class="nav-item"><a href="#CONTACT" class="nav-link">CONTACT US</a></li>
@@ -55,10 +55,7 @@
 						<div class="header-btns">
 							<!--header buttons-->
 							<a class="btn btn-matter" href="login.php">Submit<br>Your Concern</a>
-							<a class="btn btn-tour" href="#">Take a Tour
-								<i class="fa fa-angle-down"></i>
-								<p>and see what it's all about!</p>
-							</a>
+							<a class="btn btn-tour" href="#">See what others<br>are talking about</p></a>
 						</div>
 					</div>
 					<div class="col-md-6">
@@ -94,8 +91,8 @@
 	</header>
 
 	<!--About us-->
-	<section id="white">
-		<div class="container" id="ABOUT">
+	<section id="ABOUT">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-10 offset-1">
 					<!--About Us Title & Desc-->
@@ -235,8 +232,8 @@
 	</section>
 
 	<!--What's happenning-->
-	<section id="white" class="features">
-		<div class="container" id="FEATURES">
+	<section id="FEATURES" class="features">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-10 offset-1">
 					<div class="section-title">
@@ -379,8 +376,8 @@
 	</section>
 
 	<!--Contact us-->
-	<section id="white" class="contact-us">
-		<div class="container" id="CONTACT">
+	<section id="CONTACT" class="contact-us">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-10 offset-1">
 					<div class="section-title">
@@ -479,6 +476,9 @@
 	<script type="js/bootstrap.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 	<!--custom js-->
 	<script src="js/custom.js" type="text/javascript"></script>
 	
